Refactor and completely over-engineer the Main class 🎁